# Qwen-TPU

./: .gitignore  .gitmodules  README.md  api.py  chat.py  qwenc.py
compile/: compile.sh  compile_14b.sh  compile_1_8b.sh  export_onnx.py  test_token.py
demo/: CMakeLists.txt  demo.cpp
utils/: modeling_qwen.py
webdemo/: CMakeLists.txt  REANME.md  api.py  demo.cpp  qwenc.py  web_demo.py
webdemo/include/: bmdef.h
